# clowder2

./: .babelrc  .babelrc.ignore  .dockerignore  .eslintrc  .flake8  .flowconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Dockerfile  Pipfile  README.md  auth.py  citation.cff  clowder.conf  docker-compose.dev.yml  docker-compose.extractors.yml  docker-compose.fastapi.yml  docker-compose.iiif.yml  docker-compose.jupyter-dev.yml  docker-compose.jupyter.yml  docker-compose.legacy.yml  docker-compose.llm.yml  docker-compose.previewers.yml  docker-compose.subdirectory.yml  docker-compose.test.yml  docker-compose.yml  docker-dev.sh  docker-prod.sh  docker.compose.yml  docker.sh  env.template  example.env  jest.config.js  karma.conf.js  main.py  openapi.json  (+10 more)
.run/: Clowder2 Dev.run.xml  Debug.run.xml  Docker Dev.run.xml  Python tests in tests.run.xml  start.run.xml  start_dev.run.xml  uvicorn.run.xml
app/: auth.py  beanie_test.py  config.py  db.py  dependencies.py  fs.py  keycloak.py  keycloak_auth.py  main.py  mongo.py
backend/: .flake8  Dockerfile  Dockerfile.Heartbeat  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-dev.sh  extract-openapi.py  heartbeat.Dockerfile  heartbeat.py  heartbeat_listener.py  message_listener.py  message_listener_sync.py  messages.Dockerfile  openapi.json  requirements.txt
charts/: local.yaml  radiant.yaml
docs/: Pipfile  README.md  mkdocs.yml  requirements.txt
extractor-heartbeat/: Dockerfile  Pipfile  heartbeat_listener_sync.py
frontend/: .babelrc  .editorconfig  (+21 more)
(+1054 files in other folders)
