[project]
name = "clowder2"
version = "2.0.0-beta.4"
description = """Clowder is a cloud native data management framework to support any research domain. Clowder was
                 developed to help researchers and scientists in data intensive domains manage raw data, complex
                 metadata, and automatic data pipelines."""
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi==0.95.1", "pydantic==1.10.13", "uvicorn==0.21.1", "motor==3.1.2", "pymongo==4.8.0",
    "beanie==1.18.0", "passlib==1.7.4", "bcrypt==4.0.1", "pyjwt==2.6.0", "minio==7.1.14", "python-multipart==0.0.6",
    "email-validator==2.0.0.post2", "python-keycloak==2.15.3", "pika==1.3.1", "aio-pika==9.0.5", "elasticsearch==8.7.0",
    "rocrate==0.7.0", "itsdangerous==2.1.2", "setuptools"]

[dependency-groups]
dev = [
    "requests==2.28.2",
    "pytest==7.3.1",
    "pytest-asyncio==0.21.0",
    "black==23.3.0",
    "faker==18.4.0",
    "pika-stubs>=0.1.3",
    "ruff>=0.8.0",
    "pre-commit>=4.0.1",
    "shellcheck-py>=0.10.0.1",
]
docs = [
    "mkdocs-material"
]
